Enhance user account management and settings; update JSON structures and improve validation